[package]
name = "rcmaes"
version = "0.1.0"
authors = ["Mikko Juola <mikjuo@gmail.com>"]
edition = "2018"
links = "cmaes"

[dependencies]
libc = "0.2"
rayon = "1.10"
rand = "0.9"
rand_distr = "0.5"
skiplist = "0.5"
pyo3 = { version = "0.23", features = ["auto-initialize"] }

[build-dependencies]
cc = "1.0"
