[package]
name = "rcmaes"
version = "0.1.0"
authors = ["Mikko Juola <mikjuo@gmail.com>"]
edition = "2018"
links = "cmaes"

[dependencies]
libc = "0.2"
rayon = "1.10"
rand = "0.9"
rand_distr = "0.5"
rug = "1"
skiplist = "0.5"
statrs = "0.18"
pyo3 = { version = "0.25", features = ["auto-initialize"], optional = true }

[build-dependencies]
cc = "1.0"

[features]
default = ["pycmaes"]
pycmaes = ["dep:pyo3"]
